# ventura

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py  conanfile.txt
examples/: CMakeLists.txt  directory_watcher.cpp  run_process.cpp
test/: CMakeLists.txt  absolute_path.cpp  async_process.cpp  file_operations.cpp  file_sink.cpp  file_size.cpp  file_source.cpp  path.cpp  path_segment.cpp  read_file.cpp  relative_path.cpp  run_process.cpp  run_process_environment.cpp  single_directory_watcher.cpp
test_programs/: CMakeLists.txt  cat.cpp
ventura/: absolute_path.hpp  async_process.hpp  cmake.hpp  file_notification.hpp  file_operations.hpp  file_size.hpp  flush.hpp  open.hpp  path.hpp  path_char.hpp  path_segment.hpp  process_handle.hpp  process_parameters.hpp  read_file.hpp  relative_path.hpp  run_process.hpp  single_directory_watcher.hpp  standard_streams.hpp  version.hpp  write_file.hpp
ventura/detail/: read_from_anonymous_pipe.hpp
ventura/linux/: inotify.hpp  inotify_watch_descriptor.hpp  single_directory_watcher.hpp
ventura/posix/: open.hpp
ventura/sink/: file_sink.hpp
ventura/source/: file_source.hpp
ventura/win32/: directory_changes.hpp  file_notification.hpp  open.hpp  overlapped_directory_changes.hpp  single_directory_watcher.hpp
