#Boost.Test uses typeid for no reason
if(NOT VENTURA_NO_RTTI)
	add_definitions(-DVENTURA_TEST_CAT="$<TARGET_FILE:cat>")
	include_directories(.)
	file(GLOB sources "*.hpp" "*.cpp" "../ventura_tests/*.cpp")
	file(GLOB_RECURSE headers "../ventura/*.hpp")
	set(allSources ${sources} ${headers})
	set(formatted ${formatted} ${allSources} PARENT_SCOPE)
	add_executable(tests ${allSources})
	target_link_libraries(tests ${Boost_LIBRARIES})
	if(UNIX AND NOT APPLE)
		target_link_libraries(tests pthread rt)
	endif()
endif()
